@@ -1,3 +1,7 @@
+2018-09-03 jasonyctam@gmail.com
+ - Added "normalised" option to getMovieDF in DFFunctions.py
+ - Created global variables for background start and end dates and hour in DataAnalysis.py, and can pipe them into DFFunctions.py and plotAnalysis.py
+
 2018-09-02 jasonyctam@gmail.com
  - Created plotChannelBackground in DataAnalysis.py
  - Created getChannelBackground in DFFunctions.py
